[package]
name = "sentry-process"
version = "1.0.2"
authors = ["David Sferruzza <david.sferruzza@gmail.com>"]
edition = "2018"
description = "Report failed processes/scripts to Sentry"
repository = "https://gitlab.com/dsferruzza/sentry-process"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["sentry"]
license = "MIT"

[badges]
gitlab = { repository = "dsferruzza/sentry-process", branch = "master" }

[dependencies]
rbl_circular_buffer = "0.1.2"

[dependencies.sentry]
version = "0.20.1"
default-features = false
features = ["contexts", "panic", "reqwest", "rustls"]
