[package]
name = "sentry-process"
version = "2.0.0"
authors = ["David Sferruzza <david.sferruzza@gmail.com>"]
edition = "2018"
description = "Report failed processes/scripts to Sentry"
repository = "https://gitlab.com/dsferruzza/sentry-process"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["sentry"]
license = "MIT"

[badges]
gitlab = { repository = "dsferruzza/sentry-process", branch = "master" }

[profile.release]
lto = true
codegen-units = 1

[dependencies]
rbl_circular_buffer = "0.1.2"

[dependencies.sentry]
version = "0.26.0"
default-features = false
features = ["contexts", "panic", "reqwest", "rustls"]
